...
            object: nil
        )
    }
    
    private func setupUI() {
        view.backgroundColor = .systemBackground
        navigationItem.title = "Transcriptions"
        
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: "TranscriptionCell")
        tableView.delegate = self
        tableView.dataSource = self
        
...
